fix blog list on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,9 @@
 	.social-icons-list {
 		flex-wrap: wrap;
 	}
+	.blog-media {
+		flex-wrap: wrap;
+	}
 }
 
 
